23 April 2015: Wouter
	- Fix crash in zone parser for relative dname after error in origin.
	- Test for zone parser failures

21 April 2015: Wouter
	- nsd-control addzones and delzones read list of zones from stdin.
	- Fix task and zonestat files to be stored in a subdirectory in tmp
	  to stop privilege elevation.
	- printout names for successful addition and removal with bulk command.

20 April 2015: Wouter
	- Fix #665: when removing subdomain, nsd does not reparse parent zone.

14 April 2015: Wouter
	- trunk contains 4.1.3(upcoming).

7 April 2015: Wouter
	- Tag 4.1.2rc2.

2 April 2015: Wouter
	- Made log message more consistent, changed 'axfr refused' log message
	  to be more consistent with other messages.  Also notify refused.
	- verbosity 2 logs axfr refused and notify refused.
	  verbosity 1 contains less log messages.

31 March 2015: Wouter
	- Tag 4.1.2rc1.

24 March 2015: Wouter
	- Fix #654: Fix contradiction in notify logging verbosity level.
	- Incoming notifies have serial number logged (at verbosity 1).
	- Fix #655: Fix contradiction in verbosity for zone transfers.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.
	- Fix allocation integer overflow checks.

13 March 2015: Wouter
	- Fix buffer overflow in config parse of domain name,
	  reported by John Van de Meulebrouck Brendgard.

12 March 2015: Wouter
	- Updated default keylength in nsd-control-setup to 3k.

10 March 2015: Wouter
	- Fix use after free after zonefile syntax error followed by ttl
	  or origin directive, reported by John Van de Meulebrouck Brendgard.
	- Fix syntax error followed by too many TXT elements parse crash
	  reported by John Van de Meulebrouck Brendgard.

9 March 2015: Wouter
	- Fix origin directive from unused old value and subdomain parser
	  failure, reported by John Van de Meulebrouck Brendgard.

2 March 2015: Wouter
	- Fix b64pton out of bounds error on invalid zonefile input